# meteobe

./: .gitignore  MANIFEST.IN  README.md  cehub_best_domains_field.py  cehub_best_domains_trial.py  cehub_field.ini  cehub_pandas_flex_dates_domains.ipynb  cehub_select_domains_trial.py  cehub_trial.ini  py_run.R  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: test_suite.yml
funs/: Rfuns.R
src/config/: codes.json  mbe.ini
src/meteobe/: configurator.py  constants.py  meteoblue_data_extractor.py
src/meteobe/config/: mbe.ini  soil_request.json  weather_request.json
