[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meteobe"
version = "0.1.2"
authors = [{ name = "Vivian Lee", email = "vivianlee.southern@gmail.com" }]
description = "Meteoblue environmental data extractor"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

keywords = ["weather data", "soil data"]

dependencies = [
  "pathlib",
  "pandas",
  "configparser",
  "configupdater",
  "meteoblue_dataset_sdk",
]

[tool.setuptools]
include-package-data = true

[project.urls]
"Homepage" = "https://github.com/syngenta/meteobe"
"Bug Tracker" = "https://github.com/syngenta/meteobe/issues"
